--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,34 @@
 {
-  "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
-    "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
-    "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-  },    
-  "include": [
-    "src"
-  ]
+    "compilerOptions": {
+        "target": "es5",
+        "lib": ["dom", "dom.iterable", "esnext"],
+        "allowJs": true,
+        "skipLibCheck": true,
+        "esModuleInterop": true,
+        "allowSyntheticDefaultImports": true,
+        "strict": true,
+        "forceConsistentCasingInFileNames": true,
+        "noFallthroughCasesInSwitch": true,
+        "module": "esnext",
+        "moduleResolution": "node",
+        "resolveJsonModule": true,
+        "isolatedModules": true,
+        "noEmit": true,
+        "jsx": "react-jsx"
+        // "paths": {
+        //     "@common": ["./common"],
+        //     "@common/*": ["./common/*"],
+        //     "@pages": ["./pages"],
+        //     "@features/*": ["./features/*"],
+        //     "@assets/*": ["./assets/*"],
+        //     "@utils/api": ["./utils/api"],
+        //     "@utils/firebase": ["./utils/firebase"],
+        //     "@utils/constants": ["./utils/constants"],
+        //     "@utils/helpers": ["./utils/helpers"],
+        //     "@utils/contexts": ["./utils/contexts"],
+        //     "@utils/hooks": ["./utils/hooks"]
+        // }
+    },
+
+    "include": ["src"]
 }
